--- a/webDev2/midterm/styles.css
+++ b/webDev2/midterm/styles.css
@@ -1,24 +1,34 @@
 body{
-	background-color: #4A4343;
+	background-color: #222;
 	color: #FFE2A9;
 	font-size: 1.5em;
 	font-family: "Ubuntu mono";
 }
+abbr{
+	text-decoration: none;
+}
 h1{
 	font-size: 4em;
 	color:#AA3F39;
-	background-color: #222;
-	box-shadow: 60px 30px 80px #AA3F39;
+	background-color: #4A4343;
+	box-shadow: 60px 30px 80px #222;
 	margin-right: 0;
+	margin-top: 0;
+	position: fixed;
+	font-family: "Cousine";
+	animation-name:inFade;
+	animation-duration:4s;
 }
 h2{
-	color:red;
+	color:#AA3F39;
 	text-align: right;
 	font-family: "Pacifico";
 	opacity: .5;
+	position: fixed;
+	margin-top: 80vh;
 }
 a{
-	color:#AC3939;
+	color:#AA3F39;
 	text-decoration: none;
 	font-weight: bold;
 }
@@ -45,19 +55,20 @@ li{
 }
 
 .design-archives, .design-selection, .zen-resources{
+	display: flex;
 	background-color:#222;
 	padding: 2.5em;
 	text-align: right;
+
 }
 .design-selection li {
 	display: block;
-
 }
 .preamble{
 	width:20vw;
 	background-color:#4A4343;
 	padding: 1.5em;
-	float: left;
+	float: right;
 	min-width: 540px;
 	box-shadow: 10px 11px 11px #AA3939;
 }
@@ -65,7 +76,6 @@ li{
 	color: #AA3939;
 }
 .summary{
-	float: right;
 	background-color: #4A4343;
 	max-width: 10vw;
 	min-width: 360px;
@@ -82,4 +92,8 @@ li{
 
 .supporting{
 	margin:10vw 20vw;
+}
+@keyframes inFade {
+    from {color: #4A4343;}
+    to {color: #AA3F39;}
 }
