adding some animation and starting work on design nav

--- a/webDev2/midterm/styles.css
+++ b/webDev2/midterm/styles.css
@@ -18,7 +18,7 @@ h1{
 	font-family: "Cousine";
 	animation-name:inFade;
 	animation-duration:4s;
-}
+}	
 h2{
 	color:#AA3F39;
 	text-align: right;
@@ -26,6 +26,22 @@ h2{
 	opacity: .5;
 	position: fixed;
 	margin-top: 80vh;
+	animation-name:rotate;
+	animation-duration:4s;
+		/* Safari */
+		-webkit-transform: rotate(-90deg);
+
+		/* Firefox */
+		-moz-transform: rotate(-90deg);
+
+		/* IE */
+		-ms-transform: rotate(-90deg);
+
+		/* Opera */
+		-o-transform: rotate(-90deg);
+
+	transform:rotate(-90deg);
+	margin-left: -10vw;
 }
 a{
 	color:#AA3F39;
@@ -35,8 +51,21 @@ a{
 ul{
 	list-style-type: none;
 }
-li{
-	display: inline;
+nav ul{
+}
+nav li{
+	
+}
+
+footer{
+	text-align: center;
+}
+.main{
+	padding: 1.5em;
+	background-color:#4A4343;
+	width:50vw;
+	min-width:500px;
+	float:right;
 }
 .main h3{
 	color:#AA3939;
@@ -44,7 +73,7 @@ li{
 	font-family: "Pacifico";
 	font-size: 1.5em;
 	border-bottom: 2px groove; 
-	width: 35%;
+	width: 45%;
 }
 .main p{
 	margin:auto;
@@ -55,13 +84,25 @@ li{
 }
 
 .design-archives, .design-selection, .zen-resources{
-	display: flex;
-	background-color:#222;
-	padding: 2.5em;
+	//padding: 2.5em;
 	text-align: right;
-
+}
+.design-selection{
+	width: 40vw;
+	text-align: left;
+}
+.design-selection ul{
+	
 }
 .design-selection li {
+	display: inline-block;
+	background-color: #4A4343;
+	margin: 2%;
+	width:50%;
+	padding:1em;
+	text-align: center;
+}
+.design-selection li a{
 	display: block;
 }
 .preamble{
@@ -70,30 +111,61 @@ li{
 	padding: 1.5em;
 	float: right;
 	min-width: 540px;
+	margin: 5%;
 	box-shadow: 10px 11px 11px #AA3939;
 }
 .preamble h3{
 	color: #AA3939;
 }
 .summary{
-	background-color: #4A4343;
+	background-color: #222;
 	max-width: 10vw;
 	min-width: 360px;
 	padding:2.5em;
 	box-shadow: 20px 40px 0px #4A4343;
-}
-.main{
-	padding: 1.5em;
-	background-color:#4A4343;
-	width:50vw;
-	min-width:500px;
-	float:right;
+	margin-left: 70vw;
 }
 
 .supporting{
 	margin:10vw 20vw;
 }
 @keyframes inFade {
-    from {color: #4A4343;}
-    to {color: #AA3F39;}
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+@keyframes rotate {
+	from {
+		/* Safari */
+		-webkit-transform: rotate(0deg);
+
+		/* Firefox */
+		-moz-transform: rotate(0deg);
+
+		/* IE */
+		-ms-transform: rotate(0deg);
+
+		/* Opera */
+		-o-transform: rotate(0deg);
+
+		/* Internet Explorer */
+		filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+		margin-left: 0;
+	}
+		to {/* Safari */
+		-webkit-transform: rotate(-90deg);
+
+		/* Firefox */
+		-moz-transform: rotate(-90deg);
+
+		/* IE */
+		-ms-transform: rotate(-90deg);
+
+		/* Opera */
+		-o-transform: rotate(-90deg);
+
+		/* Internet Explorer */
+		filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+
+		margin-left: -10vw;
+	}
 }
