--- a/webDev2/midterm/styles.css
+++ b/webDev2/midterm/styles.css
@@ -25,20 +25,20 @@ h2{
 	font-family: "Pacifico";
 	opacity: .5;
 	position: fixed;
-	margin-top: 80vh;
+	margin-top: 70vh;
 	animation-name:rotate;
-	animation-duration:4s;
-		/* Safari */
-		-webkit-transform: rotate(-90deg);
+	animation-duration:2s;
+	/* Safari */
+	-webkit-transform: rotate(-90deg);
 
-		/* Firefox */
-		-moz-transform: rotate(-90deg);
+	/* Firefox */
+	-moz-transform: rotate(-90deg);
 
-		/* IE */
-		-ms-transform: rotate(-90deg);
+	/* IE */
+	-ms-transform: rotate(-90deg);
 
-		/* Opera */
-		-o-transform: rotate(-90deg);
+	/* Opera */
+	-o-transform: rotate(-90deg);
 
 	transform:rotate(-90deg);
 	margin-left: -10vw;
@@ -65,6 +65,7 @@ footer{
 	background-color:#4A4343;
 	width:50vw;
 	float:right;
+	margin-top: 0;
 }
 .main h3{
 	color:#AA3939;
@@ -87,10 +88,10 @@ footer{
 }
 .design-selection{
 	width: 30vw;
-	margin-top: -20vh;
+	margin-top: -10vh;
 	background-color: #222;
-	text-align: center;
-	margin-left: 10vw;
+	text-align: left;
+	margin-left: 0;
 }
 .design-selection ul{
 	margin-top: 0;
@@ -101,6 +102,11 @@ footer{
 	margin: 2%;
 	padding:1em;
 	text-align: center;
+}
+.design-selection li:hover{
+	margin-left: 5%;
+	transform:scale(1.1);
+	background-color: gray;
 }
 .design-selection li a:first-of-type{
 	margin-right: 10px;
@@ -115,7 +121,8 @@ footer{
 	float: right;
 	min-width: 540px;
 	margin: 5%;
-	margin-right: 20vw;
+	margin-right: 30vw;
+	margin-top: 0;
 	box-shadow: 10px 11px 11px #AA3939;
 	animation-name:inFade;
 	animation-duration:4s;
