--- a/webDev2/midterm/styles.css
+++ b/webDev2/midterm/styles.css
@@ -1,5 +1,5 @@
 body{
-	background-color: #222;
+	background:linear-gradient(to top left, #222 30%,#FFE2A9 40%, #333 41%,red 50%,#333 59%,#FFE2A9 60%,#222 70%);
 	color: #FFE2A9;
 	font-size: 1.5em;
 	font-family: "Ubuntu mono";
@@ -18,6 +18,7 @@ h1{
 	font-family: "Cousine";
 	animation-name:inFade;
 	animation-duration:4s;
+	text-shadow:3px 1px #222;
 }	
 h2{
 	color:#AA3F39;
@@ -28,11 +29,7 @@ h2{
 	margin-top: 70vh;
 	animation-name:rotate;
 	animation-duration:2s;
-	-webkit-transform: rotate(-90deg);
-	-moz-transform: rotate(-90deg);
-	-ms-transform: rotate(-90deg);
-	-o-transform: rotate(-90deg);
-	transform:rotate(-90deg);
+	transform: rotate(-90deg);
 	margin-left: -10vw;
 }
 a{
@@ -56,8 +53,8 @@ footer{
 	padding: 1.5em;
 	background-color:#4A4343;
 	width:50vw;
-	float:right;
 	margin-top: 0;
+	clear:both;
 }
 .main h3{
 	color:#AA3939;
@@ -78,7 +75,7 @@ footer{
 	text-align: right;
 }
 .design-selection{
-	width: 30vw;
+	width: 20vw;
 	margin-top: -10vh;
 	background-color: #222;
 	text-align: left;
@@ -88,11 +85,10 @@ footer{
 	margin-top: 0;
 }
 .design-selection li {
-	display: flex;
 	background-color: #4A4343;
 	margin: 2%;
 	padding:1em;
-	text-align: center;
+	text-align: left;
 }
 .design-selection li:hover{
 	margin-left: 5%;
@@ -100,17 +96,20 @@ footer{
 	background-color: gray;
 }
 .design-selection li a:first-of-type{
-	margin-right: 10px;
+	font-size:1.2em;
+	display: block;
 }
 .design-selection li a:last-of-type{
 	margin-left: 10px;
+	color:#FFE2A9;
+	font-weight: normal;
 }
 .preamble{
 	width:20vw;
 	background-color:#4A4343;
 	padding: 1.5em;
 	float: right;
-	min-width: 540px;
+	min-width: 240px;
 	margin: 5%;
 	margin-right: 30vw;
 	margin-top: 0;
