--- a/webDev2/midterm/styles.css
+++ b/webDev2/midterm/styles.css
@@ -28,7 +28,7 @@ h2{
 	font-family: "Pacifico";
 	opacity: .5;
 	position: fixed;
-	margin-top: 70vh;
+	margin-top: 30vh;
 	animation-name:rotate;
 	animation-duration:2s;
 	transform: rotate(-90deg);
@@ -42,19 +42,22 @@ a{
 ul{
 	list-style-type: none;
 }
-nav ul{
+aside{
+  position: fixed;
+  bottom: 0;
+  width: 100%;/* Set the fixed height of the footer here */
+  height: 200px;
+  background-color: #333;
+  text-align: left
 }
-nav li{
-}
-
 footer{
 	text-align: center;
 }
 .main{
 	padding: 1.5em;
+	padding-right: 2em;
 	background-color:#4A4343;
 	width:50vw;
-	margin-top: -30vh;
 	float:left;
 }
 .main h3{
@@ -71,17 +74,15 @@ footer{
 	margin-left: 4%;
 	text-indent: 2em;
 }
-.design-archives, .design-selection, .zen-resources{
-	text-align: left;
-}
+
 .design-archives{
-	margin-top: -10vh;
 }
 .design-selection{
 	width: 25vw;
-	background-color: #222;
+	background-color: #333;
 	text-align: left;
 	margin-left: 0;
+	margin-top: -90vh;
 	display: inline-block;
 	clear: left;
 	float: right;
@@ -111,20 +112,32 @@ footer{
 	font-weight: normal;
 }
 .preamble{
-	width:40vw;
-	background-color:#4A4343;
+	width:600px;
+	border-radius: 50%;
+	background-color:#333;
 	padding: 1.5em;
 	float: right;
-	min-width: 240px;
 	margin: 5%;
-	margin-right: 30vw;
-	margin-top: -5vh;
-	box-shadow: 10px 11px 11px #AA3939;
+	margin-right: 60vw;
+	margin-top: 5vh;
+	box-shadow: 10px 11px 11px #AA3F39;
 	animation-name:inFade;
 	animation-duration:2s;
 }
 .preamble h3{
-	color: #AA3939;
+	color: #AA3F39;
+	text-align: center;
+}
+.preamble h3, .preamble p{
+	transform:scale(.8);
+	padding-left: 2.5vw;
+}
+.preamble p{
+	color:#fff;
+	width: 80%;
+	margin:auto;
+	text-indent: 2em;
+	padding:0 10px;
 }
 .summary{
 	max-width: 30vw;
@@ -132,12 +145,20 @@ footer{
 	background-color: #222;
 	padding:2.5em;
 	box-shadow: 20px 40px 0px #4A4343;
-	margin-left: 70vw;
+	margin-left: 40vw;
 }
 .zen-resources, .design-archives{
+	margin:0 10px;
 }
 .design-archives li, .zen-resources li{
 	display: inline-block;
+	transform:scale(.8);
+}
+.resources, .archives{
+	font-size: .8em;
+}
+.resources, .archives a{
+	display: inline;
 }
 .supporting{
 	margin:10vw 20vw;
