--- a/webDev2/midterm/styles.css
+++ b/webDev2/midterm/styles.css
@@ -21,14 +21,15 @@ h1{
 	animation-name:inFade;
 	animation-duration:4s;
 	text-shadow:3px 1px #222;
+	z-index: 15;
 }	
 h2{
 	color:#AA3F39;
 	text-align: right;
-	font-family: "Pacifico";
+	font-family: Helvetica;
 	opacity: .5;
 	position: fixed;
-	margin-top: 30vh;
+	margin-top: 35vh;
 	animation-name:rotate;
 	animation-duration:2s;
 	transform: rotate(-90deg);
@@ -45,10 +46,12 @@ ul{
 aside{
   position: fixed;
   bottom: 0;
-  width: 100%;/* Set the fixed height of the footer here */
+  width: 100%;
   height: 200px;
   background-color: #333;
-  text-align: left
+  text-align: left;
+  opacity: .95;
+  margin-left: -.5vw;
 }
 footer{
 	text-align: center;
@@ -78,12 +81,11 @@ footer{
 .design-archives{
 }
 .design-selection{
+	transform:scale(.8);
 	width: 25vw;
-	background-color: #333;
 	text-align: left;
-	margin-left: 0;
-	margin-top: -90vh;
-	display: inline-block;
+	margin-left: -10vw;
+	display: flex;
 	clear: left;
 	float: right;
 }
@@ -126,7 +128,9 @@ footer{
 }
 .preamble h3{
 	color: #AA3F39;
+	font-family: impact;
 	text-align: center;
+	font-weight: normal;
 }
 .preamble h3, .preamble p{
 	transform:scale(.8);
@@ -162,4 +166,5 @@ footer{
 }
 .supporting{
 	margin:10vw 20vw;
+
 }
