--- a/webDev2/midterm/styles.css
+++ b/webDev2/midterm/styles.css
@@ -1,7 +1,7 @@
 @import 'animations.css';
 
 body{
-	background:linear-gradient(to top left, #222 30%,#4A4343 40%, #333 41%,red 50%,#333 59%,#4A4343 60%,#222 70%);
+	background:linear-gradient(to top left, #222 30%,#4A4343 40%, #333 41%,#AA3F39 50%,#333 59%,#4A4343 60%,#222 70%);
 	color: #FFE2A9;
 	font-size: 1.4em;
 	font-family: Helvetica;
@@ -57,7 +57,6 @@ footer{
 .main{
 	padding: 1.5em;
 	padding-right: 2em;
-	background-color:#4A4343;
 	width:50vw;
 	float:left;
 	box-shadow:4px 0px #222;
@@ -70,6 +69,7 @@ footer{
 	font-size: 1.5em;
 	border-bottom: 2px groove; 
 	width: 45%;
+	text-shadow: 2px 3px #222;
 }
 .main p{
 	margin:auto;
@@ -110,7 +110,7 @@ footer{
 	max-width: 30vw;
 	min-width: 360px;
 	padding:2.5em;
-	box-shadow: 1px 4px 0px red;
+	box-shadow: 1px 4px 0px #222;
 	margin-left: 40vw;
 }
 .zen-resources, .design-archives,.design-selection{
