--- a/webDev2/midterm/styles.css
+++ b/webDev2/midterm/styles.css
@@ -44,7 +44,7 @@ ul{
 }
 aside{
   position: fixed;
-  background-color: #4A4343;
+  background-color: #222;
   bottom: 0;
   width: 100%;
   height: 20vh;
@@ -140,7 +140,7 @@ footer{
 .design-selection ul{
 }
 .design-selection li {
-	background-color: #4A4343;
+	background-color: #333;
 	padding:.5em;
 	text-align: left;
 }
