--- a/webDev2/midterm/styles.css
+++ b/webDev2/midterm/styles.css
@@ -1,7 +1,7 @@
 @import 'animations.css';
 
 body{
-	background:linear-gradient(to top left, #222 10%,#4A4343 40%, #333 41%,#AA3F39 50%,#333 59%,#4A4343 60%,#222 90%);
+	background:linear-gradient(to top left, #222 10%, #4A4343 40%, #333 41%, #AA3F39 50%, #333 59%, #4A4343 60%, #222 90%);
 	color: #FFE2A9;
 	font-size: 1.4em;
 	font-family: Helvetica;
@@ -14,7 +14,7 @@ h1{
 	color:#AA3F39;
 	box-shadow: 60px 30px 80px #222;
 	margin-right: 0;
-	margin-top: 0;
+	margin-top: -10vh;
 	position: fixed;
 	font-family: "Ubuntu mono";
 	animation-name:inFade;
@@ -42,13 +42,13 @@ ul{
 	list-style-type: none;
 }
 aside{
-  position: fixed;
-  background-color: #222;
-  bottom: 0;
-  width: 100%;
-  height: 20vh;
-  text-align: left;
-  margin-left: -.5vw;
+	position: fixed;
+	background-color: #222;
+	bottom: 0;
+	width: 100%;
+	height: 20vh;
+	text-align: left;
+	margin-left: -.5vw;
 }
 footer{
 	text-align: center;
@@ -56,11 +56,12 @@ footer{
 .main{
 	padding: 1.5em;
 	padding-right: 2em;
-	width:50vw;
-	float:left;
+	margin-top: 15vh;
+	margin-bottom: 25vh;
 	box-shadow:4px 0px #222;
 	background-color: #222;
 	opacity: .94;
+	float:right;
 }
 .main h3{
 	color:#AA3939;
@@ -77,19 +78,21 @@ footer{
 	margin-left: 4%;
 	text-indent: 2em;
 }
+.intro{
+	margin-top: 10vh;
+}
 
 .preamble{
 	width:600px;
-	border-radius: 50%;
 	background-color: #222;
 	padding: 1.5em;
-	float: right;
-	margin: 5%;
+	float: left;
 	margin-right: 60vw;
 	margin-top: 5vh;
 	box-shadow: 10px 11px 11px #AA3F39;
 	animation-name:inFade;
 	animation-duration:2s;
+	margin-bottom: 0;
 }
 .preamble h3{
 	color: #AA3F39;
@@ -111,8 +114,8 @@ footer{
 	max-width: 30vw;
 	min-width: 360px;
 	padding:2.5em;
+	float: left;
 	box-shadow: 1px 4px 0px #222;
-	margin-left: 40vw;
 }
 .zen-resources, .design-archives,.design-selection{
 	margin:0 10px;
@@ -129,31 +132,37 @@ footer{
 	width: 35vw;
 	font-size: .8em;
 }
+.sidebar{
+	height: 20vh;
+}
 .sidebar h3{
 	font-size:1.2em;
 	display: block;
 	margin-top: -3vh;
+	margin-left: -5vh;
 }
 .resources, .archives{
 	float: left;
 }
 .design-selection{
 	text-align: right;
-	margin-left: 65vw;
-	float: right;
+	width: 60%;
+	margin-left: 45%;
 }
-.design-selection ul{
+
+.design-selection nav{
+	width:100%;
 }
 .design-selection li {
 	background-color: #333;
 	padding:.5em;
 	text-align: left;
-	border-radius: 25%;
+	box-shadow: 10px #fff;
 }
 
 .design-selection li:hover{
-	transform:scale(1.1);
 	background-color: gray;
+	margin-top: -1vh;
 }
 .design-selection li a:first-of-type{
 	font-size:1.2em;
@@ -168,5 +177,6 @@ footer{
 	display: inline;
 }
 .supporting{
-	margin:10vw 20vw;
+	margin-top: -80vh;
+	max-width: 960px;
 }
