--- a/webDev2/midterm/styles/styles.css
+++ b/webDev2/midterm/styles/styles.css
@@ -4,7 +4,8 @@ body{
 	background-color:#222;
 	color: #FFE2A9;
 	font-size: 1.4em;
-	font-family: Helvetica;
+	font-family: impact;
+	width: 90%;
 }
 abbr{
 	text-decoration: none;
@@ -45,12 +46,11 @@ ul{
 }
 aside{
 	position: fixed;
+	width: 100%;
 	background-color: #222;
 	bottom: 0;
-	width: 100%;
-	height: 20vh;
+	height: 20%;
 	text-align: left;
-	margin-left: -.5vw;
 }
 footer{
 	text-align: center;
@@ -58,13 +58,16 @@ footer{
 .main{
 	padding: 1.5em;
 	padding-right: 2em;
-	padding-top: 20%;
-	margin-left: 40%;
-	margin-bottom: 25vh;
-	margin-top: 20%;
+	margin-left: auto;
+	margin-bottom: 25%;
+	left:50%;
+	top: 100%;
+	right: 5%;
+	position: absolute;
 	box-shadow:4px 0px #222;
 	background-color: #222;
 	float: right;
+	height: 230%;
 	width: 60%;
 	opacity: .94;
 }
@@ -79,33 +82,28 @@ footer{
 }
 .main p{
 	margin:auto;
+	line-height: 2em;
 	margin-top: 0;
 	margin-left: 4%;
 	text-indent: 2em;
 	text-shadow: 1px 1px #222;
 }
-.intro{
-	margin-top: 10vh;
-}
-
 .preamble{
-	background:radial-gradient(#222 10%, #222 40%, #222 41%, #222 50%, #333 59%, #222 60%, #222 90%);
+	background:linear-gradient(to right, #222 10%, gray 20%, #222 21%, black 50%, #333 79%, gray 80%, #222 90%);
 	padding: 1.5em;
 	margin-right: 60vw;
 	box-shadow: 10px 11px 11px #AA3F39;
 	animation-name:inFade;
 	animation-duration:2s;
 	margin-bottom: 0;
+	position: absolute;
+	left:5%;
+	width: 35%;
 }
 .preamble h3{
 	font-family: sinCity;
-
 	color: #AA3F39;
 	text-align: center;
-}
-.preamble h3, .preamble p{
-	transform:scale(.8);
-	padding-left: 2.5vw;
 }
 .preamble p{
 	width: 80%;
@@ -113,8 +111,7 @@ footer{
 	padding:0 10px;
 }
 .summary{
-	font-family: sinCity;
-
+	font-family: impact;
 	max-width: 30vw;
 	min-width: 360px;
 	padding:2.5em;
@@ -123,7 +120,7 @@ footer{
 .zen-resources, .design-archives,.design-selection{
 	margin:0 10px;
 }
-.design-archives li, .zen-resources li,.design-selection li{
+.design-archives li, .zen-resources li{
 	display: inline-block;
 }
 .design-archives, .zen-resources{
@@ -131,32 +128,25 @@ footer{
 }
 .resources, .archives,.design-selection{
 	position: fixed;
-	transform:scale(.8);
-	width: 35vw;
-	font-size: .8em;
-}
-.sidebar{
-	height: 20vh;
 }
 .sidebar h3{
 	font-size:1.2em;
 	display: block;
 	margin-top: -3vh;
-	margin-left: -5vh;
 }
-.resources, .archives{
+.resources, .archives,.design-selection{
 	float: left;
 }
 .design-selection{
 	text-align: right;
+	right:5%;
 	width: 60%;
-	margin-left: 45%;
 }
 
 .design-selection nav{
-	width:100%;
 }
 .design-selection li {
+	display: inline-block;
 	background-color: #333;
 	padding:.5em;
 	text-align: left;
@@ -168,7 +158,6 @@ footer{
 	margin-top: -1vh;
 }
 .design-selection li a:first-of-type{
-	font-size:1.2em;
 	display: block;
 }
 .design-selection li a:last-of-type{
@@ -185,5 +174,5 @@ footer{
 }
 @font-face {
     font-family: sinCity;
-    src: url("Sin City.ttf");
+    src: url("../fonts/Sin City.ttf");
 }
