--- a/webDev2/midterm/styles/styles.css
+++ b/webDev2/midterm/styles/styles.css
@@ -1,7 +1,7 @@
 @import 'animations.css';
 
 body{
-	background-color:#222;
+	background:linear-gradient(to right, #222 20%, gray 22%, #222 23%, gray 24%, #222 26%);
 	color: #FFE2A9;
 	font-size: 1.4em;
 	font-family: impact;
@@ -26,12 +26,13 @@ h1{
 	background-color: #222;
 }
 h2{
-	color:#AA3F39;
+	color:gray;
 	text-align: right;
 	font-family: Helvetica;
 	opacity: .5;
 	position: fixed;
-	margin-top: 40vh;
+	left:27%;
+	top: 60%;
 	animation-name:rotate;
 	animation-duration:2s;
 	transform: rotate(-90deg);
@@ -65,7 +66,6 @@ footer{
 	right: 5%;
 	position: absolute;
 	box-shadow:4px 0px #222;
-	background-color: #222;
 	float: right;
 	height: 230%;
 	width: 60%;
@@ -89,15 +89,17 @@ footer{
 	text-shadow: 1px 1px #222;
 }
 .preamble{
-	background:linear-gradient(to right, #222 10%, gray 20%, #222 21%, black 50%, #333 79%, gray 80%, #222 90%);
+	position: fixed;
 	padding: 1.5em;
+	background-color: #222;
 	margin-right: 60vw;
 	box-shadow: 10px 11px 11px #AA3F39;
 	animation-name:inFade;
 	animation-duration:2s;
 	margin-bottom: 0;
-	position: absolute;
-	left:5%;
+	max-width: 720px;
+	top: 5%;
+	left:2%;
 	width: 35%;
 }
 .preamble h3{
@@ -115,7 +117,10 @@ footer{
 	max-width: 30vw;
 	min-width: 360px;
 	padding:2.5em;
-	box-shadow: 1px 4px 0px #222;
+	margin-top: 40%;
+	text-align: center
+	position: top center;
+	width: 25%;
 }
 .zen-resources, .design-archives,.design-selection{
 	margin:0 10px;
