--- a/webDev2/midterm/styles/styles.css
+++ b/webDev2/midterm/styles/styles.css
@@ -57,7 +57,7 @@ aside{
 	background-repeat:no-repeat;
 	width: 100%;
 	background-color: #222;
-	background-position: right;
+	background-position: center;
 	bottom: 0;
 	height: 20%;
 	text-align: left;
@@ -69,15 +69,11 @@ footer{
 	padding: 1.5em;
 	padding-right: 2em;
 	margin-bottom: 25%;
-	left: 40%;
-	top: 100%;
-	width: 45%;
 	position: absolute;
 	box-shadow:4px 0px #222;
 	float: right;
 	opacity: .94;
-	animation-name:raise;
-	animation-duration:2s;
+	top: 20%;
 }
 .main h3{
 	margin-bottom: 0px;
@@ -100,14 +96,14 @@ footer{
 	text-shadow: 1px 1px #222;
 }
 .preamble{
-	position: fixed;
 	padding: 1.5em;
 	animation-name:inFade;
 	animation-duration:8s;
 	margin-bottom: 0;
 	max-width: 720px;
+	position: fixed;
 	top: 10%;
-	left:2%;
+	right:5%;
 	width: 35%;
 }
 .preamble h3{
