--- a/webDev2/midterm/styles/styles.css
+++ b/webDev2/midterm/styles/styles.css
@@ -1,5 +1,7 @@
 @import 'animations.css';
-
+*{
+	margin:0;
+}
 body{
 	background:linear-gradient(to right, #222 20%, gray 22%, #222 23%, gray 24%, #222 26%);
 	color: #FFE2A9;
@@ -66,14 +68,24 @@ aside{
 footer{
 	text-align: center;
 }
+.preamble, .main{
+	width:100vw;
+
+}
+.explanation, .participation, .benefits, .requirements{
+	height:40vh;
+	width: 100%;
+}
+.explanation,.benefits{
+	background-color:gray;
+}
 .main{
 	padding: 1.5em;
 	padding-right: 2em;
-
+	margin-bottom: 35%;
 }
 .main h3{
 	margin-bottom: 0px;
-	margin-left: 5%;
 	font-family: sinCity;
 	font-size: 1.5em;
 	width: 100%;
@@ -83,8 +95,6 @@ footer{
 .main p{
 	margin:auto;
 	line-height: 2em;
-	margin-top: 0;
-	margin-left: 4%;
 	text-indent: 2em;
 	text-shadow: 1px 1px #222;
 }
@@ -92,9 +102,9 @@ footer{
 	padding: 1.5em;
 	animation-name:inFade;
 	animation-duration:8s;
-	margin-bottom: 0;
+	/*margin-bottom: 0;
 	margin-top: 10%;
-	max-width: 720px;
+	max-width: 720px;*/
 }
 .preamble h3{
 	font-family: sinCity;
@@ -107,12 +117,11 @@ footer{
 }
 .summary{
 	color: #666;
-	min-width: 360px;
 	float: right;
 	padding:2.5em;
 	margin-right: -20%;
 	text-align: center;
-	width: 25%;
+	width: 100%;
 }
 .zen-resources, .design-archives,.design-selection{
 	margin:0 10px;
@@ -172,7 +181,7 @@ footer{
 	display: inline;
 }
 .supporting{
-	max-width: 960px;
+	//max-width: 960px;
 }
 @font-face {
     font-family: sinCity;
