--- a/webDev2/midterm/styles/styles.css
+++ b/webDev2/midterm/styles/styles.css
@@ -57,7 +57,6 @@ aside{
 	position: fixed;
 	background-image:url("../images/botRoadBW.jpg");
 	background-size: 5000px;
-	background-repeat:no-repeat;
 	width: 100%;
 	background-color: #222;
 	background-position: center;
@@ -82,7 +81,7 @@ footer{
 .main{
 	padding: 1.5em;
 	padding-right: 2em;
-	margin-bottom: 35%;
+	margin-bottom: 25%;
 }
 .main h3{
 	margin-bottom: 0px;
@@ -98,13 +97,23 @@ footer{
 	text-indent: 2em;
 	text-shadow: 1px 1px #222;
 }
+.explanation{
+	background: url(../images/rockSurface.jpg);
+	background-attachment: fixed;
+	background-position: center center;
+	background-repeat:no-repeat;
+}
+.requirements{
+	background: url(../images/roadBW.jpg);
+	background-attachment: fixed;
+	background-position: center center;
+	background-repeat:no-repeat;
+}
 .preamble{
+	width: 40vw;
 	padding: 1.5em;
 	animation-name:inFade;
 	animation-duration:8s;
-	/*margin-bottom: 0;
-	margin-top: 10%;
-	max-width: 720px;*/
 }
 .preamble h3{
 	font-family: sinCity;
